package ensyu_servlet;

import java.io.IOException;

import javax.servlet.ServletException;
import javax.servlet.annotation.WebServlet;
import javax.servlet.http.HttpServlet;
import javax.servlet.http.HttpServletRequest;
import javax.servlet.http.HttpServletResponse;
import javax.servlet.http.HttpSession;

import ensyu_model.Res;
import ensyu_model.ResDAO;

/**
 * Servlet implementation class InsertServlet
 */
@WebServlet("/keijiban_insert")
public class InsertServlet extends HttpServlet {
	private static final long serialVersionUID = 1L;

    /**
     * @see HttpServlet#HttpServlet()
     */
    public InsertServlet() {
        super();
        // TODO Auto-generated constructor stub
    }

	/**
	 * @see HttpServlet#doGet(HttpServletRequest request, HttpServletResponse response)
	 */
	protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
		// TODO Auto-generated method stub
		response.getWriter().append("Served at: ").append(request.getContextPath());
	}

	/**
	 * @see HttpServlet#doPost(HttpServletRequest request, HttpServletResponse response)
	 */
	protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
		request.setCharacterEncoding("UTF-8");
		HttpSession session = request.getSession();

		try {
		ResDAO rDao = new ResDAO();
		String name = request.getParameter("name");
		String main = request.getParameter("main");

		if(name.equals("")) {
			throw new IllegalAccessException("名前が未入力です。");
		}

		if(main.equals("")) {
			throw new IllegalAccessException("本文が未入力です。");
		}


		rDao.insert(new Res(0,name,main,null));
		session.removeAttribute("msg");

		response.sendRedirect("keijiban_home");

		}catch(NumberFormatException | IllegalAccessException e){
			session.setAttribute("msg", e.getMessage());

			response.sendRedirect("keijiban_home");
		}
	}

}

